sinatra-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sinatra-service
spec:
  type: NodePort
  selector:
    app: sinatra
  ports:
  - protocol: TCP
    port: 4567
